[tool.poetry]
name = "blockexp"
version = "0.4.0"
description = ""
authors = ["EcmaXp <ecmaxp@ecmaxp.pe.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
web3 = "5.0"
uvicorn = "^0.8.6"
starlette = {version = "^0.12.7", extras = ["full"]}
marshmallow = "^3.0.0rc9"
marshmallow-enum = "^1.4.1"
typing-inspect = "^0.4.0"
apispec = "^2.0.2"
requests-async = "^0.6.2"
motor = "==2.0.0"
aioredis = "^1.2.0"
databases = "^0.2.5"
bitcoinlib = "^0.4.10"
aiocache = "^0.11.1"
python-socketio = "^4.3.1"
click = "^7.0"
msgpack = "^0.6.1"
toml = "^0.10.0"
pytest = "^5.0"

[tool.poetry.dev-dependencies]
tqdm = "^4.33"
python-bitcoinlib = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
